[package]
name = "rx_observer_macros"
version = "0.0.1"
authors = ["Dmytro Horskyi <dmgorsky@gmail.com>"]
description = "Proc macro for rx_observer"
keywords = ["proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2.0", features = ["fold", "full", "extra-traits"] }

